Wed Apr  6 14:03:57 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* TAO_IDL/be/be_codegen.cpp:

	  Removed "tao/TypeCode_Enumerator.h" include directive
	  generation.  That file no longer exists.

	* TAO_IDL/be/be_visitor_arg_traits.cpp:

	  No need to generated export macros for declarations that are
	  local to a stub/skeleton source file, and will never be exposed
	  to external code.

	* TAO_IDL/be/be_visitor_typecode/alias_typecode.cpp:
	* TAO_IDL/be/be_visitor_typecode/enum_typecode.cpp:
	* TAO_IDL/be/be_visitor_typecode/struct_typecode.cpp:
	* TAO_IDL/be/be_visitor_typecode/typecode_defn.cpp:
	* TAO_IDL/be/be_visitor_typecode/union_typecode.cpp:
	* TAO_IDL/be/be_visitor_typecode/value_typecode.cpp:
	* tao/SystemException.cpp:
	* tao/TypeCode.cpp:
	* tao/DynamicInterface/Unknown_User_Exception.cpp:
	* tao/Valuetype/ValueBase.cpp:

	  Updated to use revised concrete TypeCode interfaces.

	* tao/Alias_TypeCode.cpp:
	* tao/Alias_TypeCode.h:
	* tao/Alias_TypeCode.inl:
	* tao/Enum_TypeCode.cpp:
	* tao/Enum_TypeCode.h:
	* tao/Enum_TypeCode.inl:
	* tao/Fixed_TypeCode.cpp:
	* tao/Fixed_TypeCode.h:
	* tao/Fixed_TypeCode.inl:
	* tao/Sequence_TypeCode.cpp:
	* tao/Sequence_TypeCode.h:
	* tao/Sequence_TypeCode.inl:
	* tao/Struct_TypeCode.cpp:
	* tao/Struct_TypeCode.h:
	* tao/Struct_TypeCode.inl:
	* tao/TypeCode_Case.cpp:
	* tao/TypeCode_Case.h:
	* tao/TypeCode_Case.inl:
	* tao/TypeCode_Default_Case.cpp:
	* tao/TypeCode_Default_Case.h:
	* tao/TypeCode_Default_Case.inl:
	* tao/TypeCode_Non_Default_Case.cpp:
	* tao/TypeCode_Non_Default_Case.h:
	* tao/TypeCode_Non_Default_Case.inl:
	* tao/TypeCode_Struct_Field.cpp:
	* tao/TypeCode_Struct_Field.h:
	* tao/TypeCode_Struct_Field.inl:
	* tao/TypeCode_Value_Field.cpp:
	* tao/TypeCode_Value_Field.h:
	* tao/TypeCode_Value_Field.inl:
	* tao/Union_TypeCode.cpp:
	* tao/Union_TypeCode.h:
	* tao/Union_TypeCode.inl:
	* tao/Value_TypeCode.cpp:
	* tao/Value_TypeCode.h:
	* tao/Value_TypeCode.inl:
