@@ -1,3 +1,15 @@
+Wed Apr  6 17:01:49 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>
+
+	* tao/TypeCode_Base_Attributes.h:
+
+	  Removed unnecessary #include directive.
+
+	* tao/TypeCode_Base_Attributes.inl:
+
+	  Instead of specializing class members for a specific string
+	  type, rely on the TAO::TypeCode::Traits<>::get_string() method
+	  instead.  Addresses MSVC++ duplicate definition link errors.
+
 Wed Apr  6 14:03:57 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>
 
 	* TAO_IDL/be/be_codegen.cpp:
